<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintVertical_bias="0.5"
    tools:context=".MainActivity"
    android:maxWidth="600dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarMain"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/mediumPurple"
        app:title="@string/title"
        app:titleTextAppearance="@style/ToolbarTitleBold"
        app:titleTextColor="@color/white" />

    <GridLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="11"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolBarMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <EditText
            android:id="@+id/inputET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="fill"
            android:hint="@string/input"
            android:inputType="none"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck, Autofill" />

        <TextView
            android:id="@+id/resultTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="center"
            android:hint="@string/result"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/divBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:layout_column="3"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/_1BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/_2BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/_3BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/multBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/_4BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/_5BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/_6BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/minusBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/_7BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/_8BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/_9BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/plusBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:layout_row="5"
            android:layout_column="3"
            android:layout_rowSpan="3"
            android:layout_gravity="fill"/>

        <Button
            android:id="@+id/_0BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:text="@string/_0"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/resultBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equals"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"/>
        <Button
            android:id="@+id/resetBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="fill"/>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>